--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+    <div class="text-center p-5">
+        <button class="m-3 btn btn-primary" id="playbutton">Gioca</button>
+        <div id="players" class="mb-3"></div>
+        <div id="message" class="fw-bold"></div>
+    </div>
+
 
 </body>
 
