added reset button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MAIL E DADI</title>
     <!-- Importo Bootstrap -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css'
         integrity='sha512-r0fo0kMK8myZfuKWk9b6yY8azUnHCPhgNz/uWDl2rtMdWJlk7gmd9socvGZdZzICwAkMgfTkVrplDahQ07Gi0A=='
@@ -16,12 +16,16 @@
 </head>
 
 <body>
+    <!-- ESERCIZIO 1 -->
     <div class="text-center p-5">
-        <button class="m-3 btn btn-primary" id="playbutton">Gioca</button>
-        <div id="players" class="mb-3"></div>
-        <div id="message" class="fw-bold"></div>
+        <button type="button" class="m-3 btn btn-primary" id="playbutton">Gioca</button>
+        <button type="button" class="m-3 btn btn-warning" id="resetbutton">Reset</button>
+
+        <div id="players" class="mb-3"> </div>
+        <div id="message" class="fw-bold"> </div>
     </div>
 
+    <!-- ESERCIZIO 2 -->
 
 </body>
 
