--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
 
         <!-- ESERCIZIO 2 -->
         <div class="p-5 bg-primary text-white">
-            <div class="alert alert-success d-none" role="alert">
+            <div id="alertsuccess" class="alert alert-success d-none" role="alert">
                 Email corretta
             </div>
-            <div class="alert alert-danger d-none" role="alert">
+            <div id="alertdanger" class="alert alert-danger d-none" role="alert">
                 Email non registrata
             </div>
             <label for="email" class="form-label">Email address</label>
             <input type="text" class="form-control" id="email" placeholder="name@example.com">
+            <button type="button" class="btn btn-dark mt-3" id="controll-btn">Controllo</button>
         </div>
     </div>
 
