added a bit of css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <!-- ESERCIZIO 1 -->
-    <div class="container">
+    <div class="container box">
 
-        <div class="text-center p-5 bg-info">
+        <div class="text-center mt-4 p-5 bg-info w-50 esercizio1">
             <button type="button" class="m-3 btn btn-primary" id="playbutton">Gioca</button>
             <button type="button" class="m-3 btn btn-warning" id="resetbutton">Reset</button>
 
@@ -28,14 +28,14 @@
         </div>
 
         <!-- ESERCIZIO 2 -->
-        <div class="p-5 bg-primary text-white">
+        <div class="p-5 mt-4 bg-primary esercizio2 text-white">
             <div id="alertsuccess" class="alert alert-success d-none" role="alert">
                 Email corretta
             </div>
             <div id="alertdanger" class="alert alert-danger d-none" role="alert">
                 Email non registrata
             </div>
-            <label for="email" class="form-label">Email address</label>
+            <label for="email" class="form-label display-1">Email address</label>
             <input type="text" class="form-control" id="email" placeholder="name@example.com">
             <button type="button" class="btn btn-dark mt-3" id="controll-btn">Controllo</button>
         </div>
