--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css'
         integrity='sha512-r0fo0kMK8myZfuKWk9b6yY8azUnHCPhgNz/uWDl2rtMdWJlk7gmd9socvGZdZzICwAkMgfTkVrplDahQ07Gi0A=='
         crossorigin='anonymous' />
+    <!-- IMPORTO LE ICONE -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css'
+        integrity='sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ=='
+        crossorigin='anonymous' />
     <!-- Collego il foglio style.css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Collogo il foglio script.js -->
@@ -19,7 +23,7 @@
     <!-- ESERCIZIO 1 -->
     <div class="container box">
 
-        <div class="text-center mt-4 p-5 bg-info w-50 esercizio1">
+        <div class="text-center mt-4 p-5 bg-info w-25 esercizio1">
             <button type="button" class="m-3 btn btn-primary" id="playbutton">Gioca</button>
             <button type="button" class="m-3 btn btn-warning" id="resetbutton">Reset</button>
 
@@ -29,15 +33,21 @@
 
         <!-- ESERCIZIO 2 -->
         <div class="p-5 mt-4 bg-primary esercizio2 text-white">
+            <label for="email" class="form-label display-1">Email address</label>
             <div id="alertsuccess" class="alert alert-success d-none" role="alert">
+                <i class="fa-solid fa-check"></i>
                 Email corretta
             </div>
             <div id="alertdanger" class="alert alert-danger d-none" role="alert">
+                <i class="fa-solid fa-triangle-exclamation"></i>
                 Email non registrata
+                <i class="fa-solid fa-triangle-exclamation"></i>
             </div>
-            <label for="email" class="form-label display-1">Email address</label>
             <input type="text" class="form-control" id="email" placeholder="name@example.com">
-            <button type="button" class="btn btn-dark mt-3" id="controll-btn">Controllo</button>
+            <div class="text-center">
+                <button type="button" class="btn btn-dark mt-3" id="controll-btn">Controllo</button>
+
+            </div>
         </div>
     </div>
 
